@@ -4,4 +4,21 @@ plugins {
 
 dependencies {
     implementation project(':shared')
+    testRuntimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: LOG4J_VERSION
+    testRuntimeOnly group: 'com.lmax', name: 'disruptor', version: DISRUPTOR_VERSION
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.14.0'
+    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.14.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.14.0'
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs('--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED')
+    jvmArgs('--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED')
+
+    testLogging {
+        showStandardStreams = true
+        exceptionFormat = 'full'
+    }
 }
